[package]
name = "ursula-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Benchmark client for Durable Streams servers: drives multi-stream write, SSE fan-out, and catch-up replay workloads against Ursula, the Durable Streams reference, and S2 Lite."

[[bin]]
name = "ursula-bench"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
hdrhistogram = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "stream", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints.clippy]
wildcard_imports = "deny"
