[package]
name = "ursula-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Safe operational CLI for Ursula clusters: drains raft leaderships before restart, waits for applied_index catch-up, and refuses to roll if the cluster cannot make progress."

[[bin]]
name = "ursulactl"
path = "src/bin/ursulactl.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true, features = ["serde"] }

[lints.clippy]
wildcard_imports = "deny"
